# news-analytics

./: .flake8  .gitignore  .pre-commit-config.yaml  BERT_test.py  README.md  Test named entity recognition.ipynb  compute_reduction.py  compute_reduction_eng.py  create_lda_month.py  fix_topic_modeling.py  lda_test.py  news_post_process.py  pyproject.toml  requirements.txt  server.py  test.txt  test_update_db.py  topic_extraction.py  utils.py  utils_old.py
configuration/: config_server.yaml  configuration.yaml
core_modules/named_entity_recognition/: named_entity_recognition.py
core_modules/news_analyzer/: news_analyzer.py
core_modules/news_similarity/: news_similarity.py
core_modules/topic_extraction/: Create LDA Model.ipynb  Create LDA Model.py  Test load LDA Model.ipynb  doc_topic.json  lda_module.py  lda_test.py  lda_utils.py  nlp_utils.py
core_modules/triple_extraction/: triples_extraction.py  triples_from_other.py  triples_test.py
post_processing/: news_post_process.py
representations/: graphs.py
scraping/: news.py  news_scraper.py  scheduled_scraping_handler.py
test_modules/: Articles Similarity - POC.ipynb  BERT_test.py  Bert Encoding Test.ipynb  Graph.ipynb  Huggingface transformers test.ipynb  Named Entity Extraction.ipynb  Untitled.ipynb  fix_triples_data_structure.py  sentence_pairs.py  sentiment  sentiment.py  test_update_db.py  topic_extraction.py
test_modules/BERT/: BERT_Tutorial_1.ipynb  Bert Encoding Test.ipynb  bert_download.py
test_modules/BERT-Text-Segmentation-master/: ConvertSegmentFilesToBertInputs.ipynb
test_modules/elasticsearch/: configuration.yaml  twitter_post_process.py
test_modules/formatting_data/: fake_pipeline.py  fix_datetime.py  fix_empty_docs.py  fix_mongo_data.py  fix_triples_data_structure.py  test_updated_pipeline.py
test_modules/gnews-scraper/: Turkish News Downloader.ipynb  gnews.py
topic-lda/: LDA-BBC.ipynb
topic_extraction/: doc_topic.json  lda_module.py  lda_test.py  lda_utils.py  nlp_utils.py
triple_extraction/: test_triples_from_other.py  triples_from_other.py
utils/: db_handler.py  most_frequent_words.py
(+64 files in other folders)
